fix product wrap

--- a/src/app/components/products/product-card/product-card.component.scss
+++ b/src/app/components/products/product-card/product-card.component.scss
@@ -7,6 +7,10 @@
   height: 100%;
 }
 
+.image {
+  cursor: zoom-in;
+}
+
 .text-container {
   display: flex;
   flex-direction: column;
