--- a/src/styles/grid.scss
+++ b/src/styles/grid.scss
@@ -2,5 +2,5 @@
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr);
   gap: 24px;
-  padding: 0 15%;
+  padding: 0 10%;
 }
